# rforth

./: Cargo.toml  LICENSE  README.md
documentation/: rforth.md
examples/: factorial.fth  fibonacci.fth  gcd.fth  immediate.fth  loops.fth
src/: eval.rs  main.rs  number_ops.rs  parser.rs  stack_ops.rs  token.rs
