[package]
name = "rforth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
home = "0.5.9"
logos = "0.14.0"
rustyline = "13.0.0"
inkwell = { version = "0.6.0", features = ["llvm18-1"], optional = true }
anyhow = "1.0.75"
thiserror = "1.0.49"

[features]
default = []
jit = ["inkwell"]  # Enable JIT compilation with LLVM
